--- a/vcastplay-cms/src/app/features/design-layout/design-layout-details/design-layout-details.component.html
+++ b/vcastplay-cms/src/app/features/design-layout/design-layout-details/design-layout-details.component.html
@@ -15,9 +15,16 @@
   >
     @if (designLayoutService.getCanvas()) {
     <div
-      class="absolute top-0 left-0 py-2 px-1 bg-[var(--p-surface-100)] shadow-lg rounded-lg z-40"
+      class="absolute top-0 left-0 py-2 px-1 bg-[var(--p-surface-100)] dark:bg-[var(--p-surface-800)] shadow-lg rounded-lg z-40"
     >
       <app-design-layout-tools (resetDragPosition)="onResetCanvasPosition()" />
+    </div>
+
+    <div class="absolute bottom-0 left-0 p-2 bg-[var(--p-surface-100)] dark:bg-[var(--p-surface-800)] shadow-lg rounded-lg z-40">
+      <div class="flex items-center gap-2">
+        <p-checkbox inputId="showGridLines" [(ngModel)]="showGridLines" (onChange)="onShowGridLinesChange($event)" binary />
+        <label for="showGridLines" class="text-sm">Show Grid</label>
+      </div>
     </div>
     }
 
@@ -128,11 +135,11 @@
     </div>
     } @if (canvasProps.zoom) {
     <div
-      class="flex items-center gap-5 absolute bottom-0 right-0 z-50 bg-[var(--p-surface-50)] shadow-lg rounded-lg py-2 px-3"
+      class="flex items-center gap-5 absolute bottom-0 right-0 z-50 bg-[var(--p-surface-50)] dark:bg-[var(--p-surface-800)] shadow-lg rounded-lg py-2 px-3"
       cdkDragBoundary=".canvas-boundary"
       cdkDrag
     >
-      <div class="w-2 h-8 bg-[var(--p-surface-200)] rounded-lg cursor-move" cdkDragHandle></div>
+      <div class="w-2 h-8 bg-[var(--p-surface-200)] dark:bg-black rounded-lg cursor-move" cdkDragHandle></div>
       <p-slider
         min="0.10"
         max="2.0"
@@ -152,15 +159,15 @@
     </div>
     } @if (canvasProps.selection) {
     <div
-      class="flex items-center gap-1 absolute top-0 right-0 z-50 bg-[var(--p-surface-50)] shadow-lg rounded-lg p-2"
+      class="flex items-center gap-1 absolute top-0 right-0 z-50 bg-[var(--p-surface-50)] dark:bg-[var(--p-surface-800)] shadow-lg rounded-lg p-2"
       cdkDragBoundary=".canvas-boundary"
       cdkDrag
     >
-      <div class="w-2 h-8 bg-[var(--p-surface-200)] rounded-lg cursor-move" cdkDragHandle></div>
+      <div class="w-2 h-8 bg-[var(--p-surface-200)] dark:bg-black rounded-lg cursor-move" cdkDragHandle></div>
       @for (item of objectAlignments; track $index) {
       <p-button (onClick)="item.command()" text>
         <img
-          [src]="item.image"
+          [src]="isDarkTheme ? item.darkImage : item.image"
           [alt]="item.label"
           [pTooltip]="item.label"
           tooltipPosition="bottom"
